[tool.poetry]
name = "improved-swfk-chatbot"
version = "0.1.0"
description = ""
authors = ["Dejan Kitic <dejan.kitic@ericsson.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litchain = "^0.0.2"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
transformers = "^4.41.1"
sentence-transformers = "^3.0.0"
langchainhub = "^0.1.17"
chromadb = "^0.5.0"
beautifulsoup4 = "^4.12.3"
esprima = "^4.0.1"
tree-sitter-languages = "^1.10.2"
lxml = "^5.2.2"
javalang = "^0.13.0"
tree-sitter = "0.21.3"
chainlit = "^1.1.202"
accelerate = "^0.30.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
